<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp">

    <ImageView
        android:id="@+id/img_1"
        android:layout_width="200dp"
        android:layout_height="300dp"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/login"
        android:src="@drawable/login" />

    <LinearLayout
        android:id="@+id/ll_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="30dp"
        android:layout_below="@id/img_1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/colorPrimary"
            android:textSize="30sp"
            android:textStyle="bold"
            android:text="@string/create_account"/>


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:paddingBottom="18dp"
                android:text="@string/account"/>

            <TextView
                android:id="@+id/tvRegister"
                android:clickable="true"
                android:focusable="true"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_marginStart="157dp"
                android:paddingBottom="18dp"
                android:text="@string/login_here"/>
        </FrameLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:hint="@string/email"
            app:boxStrokeColor="@color/colorPrimary"
            app:boxBackgroundMode="outline">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:inputType="textEmailAddress"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            app:endIconMode="password_toggle"
            app:boxStrokeColor="@color/colorPrimary"
            app:boxBackgroundMode="outline">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:hint="@string/password"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="130dp"
        android:layout_height="46dp"
        android:layout_below="@id/ll_1"
        android:layout_centerHorizontal="true"
        android:width="100dp"
        android:background="@drawable/button_shape"
        android:text="@string/registrasi"
        android:textColor="@color/white"
        android:textStyle="bold" />
</RelativeLayout>